<resources>
    <string name="app_name">أذكار المسلم</string>
    <string name="action_settings">Settings</string>
    <string name="select_azkar">تحديد الاذكار</string>
    <string name="select_time_azkar">أوقات الاذكار</string>
    <string name="remember_me">ذكرني كل</string>
    <string name="remember_me2">التذكير كل</string>
    <string name="chooseless"> أختر عنصر واحد أو أثنين فقط</string>
    <string name="choosemore">يجب اختيار عنصر واحد على الاقل</string>
    <string name="alarm_isworking"> تم تشغيل منبه الأذكار</string>
    <string name="times_of_azcar">أوقات الاذكار</string>
    <string name="alarm_stoped"> تسبيح المسلم</string>
    <string name="backtolistazcar">يجب اختيار عناصر من قائمة الأذكار </string>
    <string name="text_timer_selected0"> 1 دقيقة </string>
    <string name="text_timer_selected"> تحديد أوقات الأذكار </string>
    <string name="text_btn_start_remember">ابدأ التذكير</string>
    <string name="empty_spaces">تأكد من أختيار بعض العناصر</string>
    <string name="morethan_six_hour"> اختر أوقات صحيحه !</string>
    <string name="text_end_put_times">تم أضافة القيم المطلوبه</string>
    <string name="text_btn_stop_remember">تم أضافة القيم المطلوبه</string>
    <string name="text_btn_OK">تأكيد</string>
    <string name="run_inbackground">سيعمل منبه الأذكار فى الخلفيه ويتم الانتقال الى الصفحه الرئيسية</string>
    <string name="text_btn_No">الغاء</string>
    <string name="stop_remeber">إيقاف التذكير</string>
    <string name="start_remeber">أبدأ التذكير</string>
    <string name="finish_choice">أنتهيت من الاختيار</string>
    <string name="three">ثلاثة</string>
    <string name="tow">أثنان</string>
    <string name="one">واحد</string>
    <string name="num_time">التكرار</string>
    <string name="run_stimulant">تم تشغيل منبه الاذكار</string>
    <string name="titile_dialog">ذكرني كل</string>
    <string name="pickerview_cancel">الغاء</string>
    <string name="pickerview_submit">موافق</string>
    <string-array name="kind_of_azkar">
        <item>الله أكبر </item>
        <item>الحمد للَّهَ</item>
        <item>سبحان الله وبحمده</item>
        <item> لا إله إلا الله</item>
        <item> أستغفر الله </item>
        <item>الحمد لله </item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
</resources>
