<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/l_containe_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ToggleButton
        android:id="@+id/bt_play"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btnplay"
        android:gravity="left"
        android:textColor="@android:color/transparent"
        segmentedgroup:layout_constraintBottom_toTopOf="@+id/guideline22"
        segmentedgroup:layout_constraintEnd_toStartOf="@+id/bt_check2"
        segmentedgroup:layout_constraintHorizontal_bias="0.148"
        segmentedgroup:layout_constraintHorizontal_chainStyle="packed"
        segmentedgroup:layout_constraintStart_toStartOf="parent"
        segmentedgroup:layout_constraintTop_toTopOf="@+id/guideline20"
        segmentedgroup:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/_txt_kind_of_azkar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="kind_of_azkar"
        android:textColor="@color/black"
        android:textSize="18sp"
        segmentedgroup:layout_constraintEnd_toEndOf="parent"
        segmentedgroup:layout_constraintStart_toStartOf="parent"
        segmentedgroup:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/bt_check2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/unchk"
        android:gravity="center"
        android:textColor="@android:color/transparent"
        segmentedgroup:layout_constraintBottom_toTopOf="@+id/guideline22"
        segmentedgroup:layout_constraintEnd_toEndOf="parent"
        segmentedgroup:layout_constraintTop_toTopOf="@+id/guideline20"
        segmentedgroup:layout_constraintVertical_bias="0.0" />

    <info.hoang8f.android.segmented.SegmentedGroup
        android:id="@+id/segmentedGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="16dp"
        android:layout_weight="4"
        android:gravity="left"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        segmentedgroup:layout_constraintBottom_toBottomOf="parent"
        segmentedgroup:layout_constraintEnd_toStartOf="@+id/textView6"
        segmentedgroup:layout_constraintHorizontal_bias="1.0"
        segmentedgroup:layout_constraintHorizontal_chainStyle="packed"
        segmentedgroup:layout_constraintStart_toStartOf="parent"
        segmentedgroup:layout_constraintTop_toTopOf="@+id/guideline22"
        segmentedgroup:layout_constraintVertical_bias="0.155"
        segmentedgroup:sc_border_width="1dp"
        segmentedgroup:sc_corner_radius="5dp"
        segmentedgroup:sc_tint_color="#009688">

        <RadioButton
            android:id="@+id/radio_btn1"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three" />

        <RadioButton
            android:id="@+id/radio_btn2"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tow" />

        <RadioButton
            android:id="@+id/radio_btn3"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/one" />
    </info.hoang8f.android.segmented.SegmentedGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:layout_weight="2"
        android:fontFamily="@font/coor"
        android:paddingRight="16dp"
        android:text="@string/num_time"
        android:textColor="@color/black"
        android:textSize="18sp"
        segmentedgroup:layout_constraintBottom_toBottomOf="parent"
        segmentedgroup:layout_constraintEnd_toEndOf="parent"
        segmentedgroup:layout_constraintHorizontal_bias="0.5"
        segmentedgroup:layout_constraintStart_toEndOf="@+id/segmentedGroup"
        segmentedgroup:layout_constraintTop_toTopOf="@+id/guideline22"
        segmentedgroup:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/line2"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/connect_help"
        android:background="@color/color_line"
        android:gravity="center_horizontal"
        android:paddingTop="5dip" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        segmentedgroup:layout_constraintGuide_begin="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        segmentedgroup:layout_constraintGuide_begin="-41dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        segmentedgroup:layout_constraintGuide_begin="77dp" />
</androidx.constraintlayout.widget.ConstraintLayout>