<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/android_gridview_example"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/r_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/line"
            style="?android:attr/listSeparatorTextViewStyle"
            android:paddingTop="5dip"
            android:gravity="center_horizontal"
            android:layout_below="@+id/connect_help"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_line" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/line2"
        style="?android:attr/listSeparatorTextViewStyle"
        android:paddingTop="5dip"
        android:gravity="center_horizontal"
        android:layout_below="@+id/connect_help"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#b2b2b2" />
    <RelativeLayout
        android:id="@+id/r_container2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/row_tow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/text_select_time_azcar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="4"
                        android:fontFamily="@font/coor"
                        android:gravity="center"
                        android:text="@string/select_time_azkar"
                        android:textSize="22sp" />
                    <ImageView
                        android:id="@+id/icon_selected_time"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="2"
                        android:gravity="right"
                        android:src="@drawable/clipboard105" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/r_container3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:id="@+id/row_everytime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="8dp">
                <ImageView
                    android:id="@+id/icon_row2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/arrow_left" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/text_minute"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/coor"
                        android:gravity="center"
                        android:paddingRight="5dp"
                        android:text="@string/text_timer_selected0"
                        android:textColor="#e38305"
                        android:textSize="22sp" />
                    <TextView
                        android:id="@+id/tex_minute_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:paddingRight="3dp"
                        android:text=" : "
                        android:textColor="#e38305"
                        android:textSize="22sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/coor"
                        android:gravity="center"
                        android:paddingRight="3dp"
                        android:text="@string/remember_me"
                        android:textColor="#65a699"
                        android:textSize="22sp" />
                    <ImageView
                        android:id="@+id/icon_point"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:src="@drawable/dot1" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:id="@+id/line3"
        style="?android:attr/listSeparatorTextViewStyle"
        android:paddingTop="5dip"
        android:gravity="center_horizontal"
        android:layout_below="@+id/connect_help"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_line" />
    <RelativeLayout
        android:id="@+id/r_container_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:id="@+id/row_tow3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/text_select_time_azcar3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="4"
                        android:textColor="#e38305"
                        android:fontFamily="@font/coor"
                        android:gravity="center"
                        android:text="أيقاف الذكر فى وقت معين"
                        android:textSize="22sp" />
                    <ToggleButton
                        android:id="@+id/bt_check2"
                        android:layout_width="75dp"
                        android:layout_height="50dp"
                        android:background="@drawable/unchk"
                        android:gravity="right"
                        android:layout_weight="2"
                        android:textColor="@android:color/transparent" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
<RelativeLayout
        android:id="@+id/r_container_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:orientation="horizontal">
            <RelativeLayout
                android:id="@+id/row_tow6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/text_select_time_from"
                        android:focusable="false"
                        android:layout_width="120dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_weight="5"
                        android:textColor="#e38305"
                        android:gravity="center"
                        android:background="@drawable/rounded_edittext"
                        android:paddingRight="20dp"
                        android:text=""
                        android:textSize="22sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="4"
                        android:textColor="#e38305"
                        android:textSize="20dp"
                        android:gravity="center"
                        android:text=" : "/>
                    <TextView
                        android:id="@+id/text_select_time_azcar6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="4"
                        android:textColor="#65a699"
                        android:paddingRight="5dp"
                        android:fontFamily="@font/coor"
                        android:gravity="center"
                        android:text="من الساعه"
                        android:textSize="18sp" />
                    <ImageView
                        android:id="@+id/icon_point6"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:src="@drawable/dot1"
                        android:layout_weight="1"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/r_container_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingRight="30dp"
            android:orientation="horizontal">
            <RelativeLayout
                android:id="@+id/row_tow7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/text_select_time_to"
                        android:focusable="false"
                        android:layout_width="120dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_weight="5"
                        android:textColor="#e38305"
                        android:gravity="center"
                        android:background="@drawable/rounded_edittext"
                        android:paddingRight="20dp"
                        android:text=""
                        android:textSize="22sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="4"
                        android:textColor="#e38305"
                        android:textSize="20dp"
                        android:gravity="center"
                        android:text=" : "/>
                    <TextView
                        android:id="@+id/text_select_time_azcar_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="4"
                        android:textColor="#65a699"
                        android:paddingRight="5dp"
                        android:fontFamily="@font/coor"
                        android:gravity="center"
                        android:text="الى الساعه"
                        android:textSize="18sp" />
                    <ImageView
                        android:id="@+id/icon_point7"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:src="@drawable/dot1"
                        android:layout_weight="1"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/l_container2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="8dp">
        <Button
            android:id="@+id/startRemember_btn_"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_rounded_corner"
            android:text="@string/text_btn_start_remember"
            android:fontFamily="@font/coor"
            android:textSize="22dp"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</LinearLayout>